[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sorunlib"
version = "0.1.24"
description = "OCS Control Programs for running the observatory."
readme = "README.rst"
requires-python = ">=3.9"
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "ocs==0.11.3",
    "pyyaml",
]

[project.optional-dependencies]
docs = [
    "sphinx>=5.3.0",
    "sphinx_rtd_theme>=1.1.1",
]
tests = [
    "pytest-cov>=3.0.0",
    "pytest-mock>=3.12.0",
    "pytest>=7.0.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/simonsobs/sorunlib/issues"
Documentation = "https://sorunlib.readthedocs.io"
Homepage = "https://github.com/simonsobs/sorunlib"
"Source Code" = "https://github.com/simonsobs/sorunlib"

[tool.hatch.version]
path = "sorunlib/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]
